--- a/css/home.css
+++ b/css/home.css
@@ -184,13 +184,17 @@ html,body{
 {
     width: 784px;
     height: 784px;
-    border-radius: 392px;
     background-color: #3da3dc;
     overflow: hidden;
     margin: 0 auto;
     margin-top: 30px;
     position: relative;
-    -webkit-transform:rotate(0deg);
+    border-radius: 392px;
+    
+    z-index: 100;/*try to fix the round radius mask bug */
+    -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+   
+   
 }
 .home__map__wrapper
 {
