--- a/css/service.css
+++ b/css/service.css
@@ -12,7 +12,7 @@ html, body {
 #department {
   width: 1280px;
   height: 794px;
-  position: relative;
+  position: absolute;
   overflow: hidden;
   top: 78px;
   display: none;
@@ -151,7 +151,7 @@ html, body {
   #department {
     width: 100%;
     height: auto;
-    position: relative;
+    position: absolute;
     overflow: hidden;
     left: 0;
     margin-left: 0;
